--- a/src/Components/BlogPage.css
+++ b/src/Components/BlogPage.css
@@ -1,46 +1,19 @@
+.blog-card-main{
+    margin: 50px 150px 50px 150px;
+    background-color: white;
+    display: flex;
+    gap: 20px;
+    justify-content: space-evenly;
+    border: 1px solid black;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    text-align: center;
+}
 .blog-bg{
-    background: url("./blog-bg2.jpg");
-    padding-top: 20px;
+    background: url("./night.jpg");
+    padding-top: 40px;
     padding-bottom: 20px;
 }
-.blogcard-main{
-    margin: 70px 200px 70px 200px;
-    display: flex;
-    flex-wrap: wrap;
-    
-}
-.card-title{
-    font-family: 'Jost', sans-serif;
-    letter-spacing: 1px;
-    font-weight: bold;
-    margin-top: 40px;
-}
-.card-img{
-    margin: 20px;
-   width: auto;
-   height: auto;
-}
-.card-content{
-    font-family: 'Jost', sans-serif;
-    letter-spacing: 1px;
-    line-height: 20px;
-    text-align: justify;
-    margin-right: 50px;
-}
-.card1{
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    gap: 30px;
-    margin: 20px;
-}
-.a-link{
-    text-decoration: none;
-    color: black;
-    display: flex;
-    flex-wrap: wrap;
-}
+
 .h2-title{
     text-align: center;
     color: white;
@@ -48,32 +21,32 @@
     letter-spacing: 3px;
     font-size: 30px;
 }
+.card-title{
+    font-family: 'Jost', sans-serif;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+.card-content{
+    font-size: 14px;
+    font-family: 'Jost', sans-serif;
+    letter-spacing: 1px;
+    line-height: 30px;
+    text-align: justify;
+    padding-right: 30px;
+    
+}
 
-
-@media(max-width: 1000px){
-    .blogcard-main{
-        margin: 40px 40px 40px 40px;
-    }
-    .card1{
-        text-align: center;
-        display: block;
-        justify-content: center;
-        margin: 20px;
-    }
-    .card-title{
-        text-align: center;
-        margin-top: 0px;
-        margin-left: 12px;
-        margin-right: 12px;
-    }
-    .card-img{
-       
-        margin-top: 30px;
-        width: 300px
+@media(max-width: 800px){
+    .blog-card-main{
+        margin: 20px 60px 20px 60px;
+        flex-wrap: wrap;
+        padding-top: 20px;
     }
     .card-content{
-        text-align: justify;
-        margin-left: 50px;
+        line-height: 20px;
+        padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
     }
     .h2-title{
         font-size: 20px;
