--- a/src/Components/BlogPage.css
+++ b/src/Components/BlogPage.css
@@ -8,9 +8,13 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     text-align: center;
 }
+.blog-card-img{
+    width: 100%;
+}
 .blog-bg{
     background: url("./night.jpg");
-    padding-top: 40px;
+    padding-bottom: 20px;
+    padding-top: 20px;
     padding-bottom: 20px;
 }
 
@@ -40,7 +44,7 @@
     .blog-card-main{
         margin: 20px 60px 20px 60px;
         flex-wrap: wrap;
-        padding-top: 20px;
+        
     }
     .card-content{
         line-height: 20px;
